# tp_lk_2d_mp_shooter

./: .gitignore  .travis.yml  CPPLINT.cfg  LICENSE  README.md  doxygen_client.dox  doxygen_server.dox
src/: config.json
src/client/: Animations.cpp  Buttons.cpp  Camera.cpp  Colors.cpp  Entities.cpp  Equipments.cpp  Makefile  Packet.cpp  TCPClient.cpp  TcpClient.cpp  World.cpp  client_example.cpp  game.cpp  game_objects.cpp  main.cpp  mockUDPClient.cpp  thread_test.cpp
src/client/include/: Animations.hpp  Buttons.hpp  Camera.hpp  Colors.hpp  Entities.hpp  Equipments.hpp  TCPClient.hpp  TcpClient.hpp  World.hpp  game.h  game.hpp  (+1 more)
src/common/: Packet.cpp
src/network/: CPPLINT.cfg  Makefile  Packet.cpp  TcpClient.cpp  TcpServer.cpp  client_example.cpp  server_example.cpp
src/server/: Bullet.cpp  CMakeLists.txt  Game.cpp  GameObject.cpp  GameServer.cpp  Makefile  Map.cpp  MockWorld.cpp  Obstacle.cpp  Player.cpp  ServerApp.cpp  ServerWorld.cpp  TcpServer.cpp  Technic.cpp  Technics.cpp  config.json  main.cpp  utils.cpp
src/server/include/: Bullet.h  Bullet.hpp  Command.h  Command.hpp  Coordinates.hpp  Event.h  Event.hpp  Game.h  Game.hpp  GameObject.h  GameObject.hpp  GameServer.hpp  Map.h  Map.hpp  MockWorld.hpp  Obstacle.h  Obstacle.hpp  Packet.hpp  PhysicsEngine.hpp  Player.h  Player.hpp  ServerApp.hpp  ServerWorld.h  ServerWorld.hpp  TcpServer.hpp  Technic.h  Technic.hpp  Technics.hpp  World.hpp  common.hpp  utils.hpp
src/server/test/: CMakeLists.txt  test.cpp
src/server/tests/: MockWorld.hpp  test_net.cpp
uml/: tp_mp_shooter.xml  tp_mp_shooter_lite.xml
(+8 files in other folders)
